--- a/style.css
+++ b/style.css
@@ -5,7 +5,104 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0;
+margin: 0;
+padding: 0;
+box-sizing: inherit;
+}
+.conteiner-centred {
+  margin: 20px auto 0;
+  width: 1024px;
+  font-family: "Cabin", sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 40px -1px rgb(0 0 0 / 23%);
+}
+.header {
+  padding: 30px;
+  background-color: #ffffff;
+  text-align: center;
+  background-image: url(./images/pr.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.header_logo{
+  border-radius: 50%;
+}
+
+.main {display: flex;
+padding-bottom: 40px;}
+h3 {
+  text-transform: uppercase;
+}
+
+.wrapper{
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+}
+
+main .left_block{
+  width: 25%;
+    margin: 40px auto 20px;
+    padding: 5px 20px;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #ffffff;
+    background-color: gray;
+}
+main {
+  background-color: lightseagreen;
+}
+
+.language-name{ 
+  font-weight: bold;
+}
+
+.right-column h3 {
+  
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: white;
+  border-bottom: grey;
+}
+.right-column{
+  margin: 40px auto 20px;
+    padding: 5px 20px;
+}
+.hrline {
+  width: 30%;
+}
+.code {
+  margin-top: 10px;
+  background-color: rgb(223, 181, 150);
+  margin-right: 20px;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.8rem;
+  color: #ffffff;
+ 
+}
+.footer-conteiner{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  margin: 0 auto;
+  width: 1024px;
+  font-size: 18px;
+  line-height: 1.5;
+  box-shadow: 10px 10px 40px -1px rgb(0 0 0 / 23%);
+  background-color: #00cccc;
+}
+
+.logo-rs {
+ max-width: 64px;
+}
+.aboutme{
+  max-width: 500px;
 }
